--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,4 +1,5 @@
-basefolder.name=test-output/ExtentReport
-basefolder.datetimepattern=d-MMM-YY HH-mm-ss
+basefolder.name=test-output/
+basefolder.datetimepattern=dd-MMM-yyyy_HH-mm-ss
+
 extent.reporter.spark.start=true
-extent.reporter.spark.out=Spark.html
+extent.reporter.spark.out=ExtentReport.html
